# C_plus_plus

./: .gitignore  CMakeLists.txt  a.out  first.cpp  hello_world.cpp  love.1.cpp  love.cpp  task_1.c
C/: Golubev_lesson1.c
C++/Golubev_lesson_1/: CMakeLists.txt
C++/Golubev_lesson_1/include/: include.h
C++/Golubev_lesson_1/src/: lesson_1.cpp
C++/Golubev_lesson_2/: CMakeLists.txt  go
C++/Golubev_lesson_2/include/: include.h
C++/Golubev_lesson_2/src/: lesson_2_1.cpp  lesson_2_2.cpp  lesson_2_3.cpp
C++/Golubev_lesson_3/: CMakeLists.txt
C++/Golubev_lesson_3/include/: _geek.h
C++/Golubev_lesson_3/src/: lesson_3_1.cpp  lesson_3_2.cpp  lesson_3_3.cpp  lesson_3_4.cpp  lesson_3_5.cpp  lesson_3_6.cpp
C/Golubev_lesson2/: Golubev_lesson_2.odt  function.h  task_1.c
C/Golubev_lesson3/: task_4.c
coursera/1/: line.cpp
coursera/week1/: sorted_strings.cpp
coursera/week2/10_to_do_list/: concerns.cpp
coursera/week2/11_anagramma/: anagrams.cpp
coursera/week2/12_capitals/: countries.cpp
coursera/week2/13_14_18_bus_station/: buses1.cpp  buses2.cpp  buses3.cpp
coursera/week2/15_unique/: unique.cpp
coursera/week2/16_map_values/: map_values.cpp
coursera/week2/17_synonyms/: synonyms.cpp
coursera/week3/4_5_7_names/: names1.cpp  names2.cpp  names3.cpp
coursera/week3/6_reversible_strings/: reversible_string.cpp
coursera/week3/7_incognizable/: incognizable.cpp
coursera/week5/: solution.cpp
tasks/Golubev_lesson2/: function.h  task_1.c  task_2.c  task_3.c
tasks/Golubev_lesson3/: function.h  task1.c  task_1.c  task_2.c  task_3.c  task_4.c
(+12 files in other folders)
